#57: Due to not wrapping correctly most of the time, the text field for the note in the report view is changed to a label. Furthermore for the sake of better contrast and readability the background color of the selected row is set to doubleSlash brand blue and the text color remains white.

--- a/src/main/resources/css/dialog.css
+++ b/src/main/resources/css/dialog.css
@@ -12,6 +12,9 @@
 	-fx-padding:0px;
 	-fx-margin:0px
 }
+.tree-table-row-cell:selected {
+    -fx-background-color: #00a5e1;
+}
 .tree-table-row-cell .arrow {
 	-fx-padding:4px;
 }
